# meshchecker

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
src/meshcheck/: __init__.py  main.py
